<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Họ và tên"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Mật khẩu"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập lại mật khẩu"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="12dp"/>

        <Spinner
            android:id="@+id/spinnerRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đăng ký"/>

    </LinearLayout>
</ScrollView>
